--- a/addMSACard.html
+++ b/addMSACard.html
@@ -24,7 +24,7 @@
       <div class="navbar-inner">
         <div class="container">
           <a class="brand" href="/">
-              Monash Club Registration
+Monash C&S Membership Database
           </a>
           <ul class="nav">
           </ul>
