--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <div class="navbar-inner">
         <div class="container">
           <a class="brand" href="/">
-            Monash Club Registration
-          </a>
+Monash C&S Membership Database
+           </a>
           <ul class="nav">
           </ul>
         </div>
@@ -35,8 +35,7 @@
     <div class="container">
       <div>
         <p>
-          Warning: Beta. If something can be changed, it will be changed. Contact james.austin@terransoftware.com if you have any questions or concerns.
-		  Seperation of responsibilitys by accounts has been implemented. Feel free to contact me if you feel you need access to something, or you feel like you have access to too much.
+
 		  <br>
 
 		{% if loginMessage %}
@@ -47,7 +46,7 @@
 		</p>
 		{% endif %}
 		
-
+		<font size='5'>General Functions:</font>
 		  
           <br>
 		{% if addNewPerson %}
@@ -174,6 +173,15 @@
         </p>
       </div>
 	  {{ logoutMessage }}
+	<br><br>
+	<font size='1'>
+	<a class="title  imgScanned click" href="http://monashclubs.org/">
+            Clubs and Societies
+          </a> is a division of the 
+	<a class="title  imgScanned click" href="http://monashstudentassociation.com/">
+            Monash Student Association Inc.
+          </a> Developed By James Austin. Copyright 2013.
+	</font>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
     </script>
