--- a/addEvent.html
+++ b/addEvent.html
@@ -25,7 +25,7 @@
       <div class="navbar-inner">
         <div class="container">
           <a class="brand" href="/">
-            Monash Club Registration
+Monash C&S Membership Database
           </a>
           
         </div>
