--- a/explanation.html
+++ b/explanation.html
@@ -22,11 +22,7 @@
       </script>
     <![endif]-->
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+
     <style>
     </style>
   </head>
@@ -36,8 +32,8 @@
       <div class="navbar-inner">
         <div class="container">
           <a class="brand" href="/">
-              Monash Club Registration
-          </a>
+Monash C&S Membership Database
+           </a>
           <ul class="nav">
           </ul>
         </div>
