--- a/viewClubMembers.html
+++ b/viewClubMembers.html
@@ -27,8 +27,8 @@
       <div class="navbar-inner">
         <div class="container">
           <a class="brand" href="/">
-            Monash Club Registration
-          </a>
+Monash C&S Membership Database
+           </a>
           <ul class="nav">
           </ul>
         </div>
