Updated changes, been to long since I updated the repo.

--- a/addMember.html
+++ b/addMember.html
@@ -70,7 +70,7 @@ Monash C&S Membership Database
           Has MSA card?
         </label>
         <input type="radio" name="msacardstatus" value="YES"> Has a MSA card<br>
-		<input type="radio" name="msacardstatus" value="NO" checked=Yes> Doesn't have a MSA card
+		<input type="radio" name="msacardstatus" value="NO"> Doesn't have a MSA card
       </div>
 	  <div class="control-group">
         <label for="studentid">
