--- a/register.html
+++ b/register.html
@@ -84,7 +84,7 @@ Monash C&S Membership Database
         </select>
       </div>
 	
-	If you are a non student, please ignore the Authcate field, and use your phone number as a Student ID.
+	Monash Students & Staff only. If you are not a Monash Student/Staff please ignore the Authcate field and type your mobile phone as Student ID.
 
       <div class="control-group">
         <label for="authcate">
@@ -100,7 +100,7 @@ Monash C&S Membership Database
       </div>
       <div class="control-group">
         <label for="email">
-          Email*
+          Alternate Email
         </label>
         <input id="email" name="email" type="">
       </div>
