--- a/viewClubMembers.html
+++ b/viewClubMembers.html
@@ -19,6 +19,8 @@
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
     
     <style>
+   table {border-collapse:collapse; table-layout:fixed; width:1000px;}
+   table td {border:solid 1px #fab; word-wrap:break-word;}
     </style>
   </head>
   
