--- a/viewEventAttendees.html
+++ b/viewEventAttendees.html
@@ -43,9 +43,9 @@ Monash C&S Membership Database
 		
 			<br>
 	
-	I, _____, declare that this is a true record of the attendants at our event, {{ nameOfEvent }} on {{ eventDate }} at {{ eventLocation }}.  <br><br>
+	I, ____________________, declare that this is a true record of the attendants at our event, {{ nameOfEvent }} on {{ eventDate }} at {{ eventLocation }}.  <br><br>
 
-	Signed:______________, Date:____________ <br><br>
+	Signed:____________________, Date:____________________ <br><br>
 
 	Number of attendees: {{ numberOfAttendees }} <br>
 	Number of club members: {{ numberOfClubMembers }} <br>
